--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -76,10 +76,10 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-  <!--&lt;!&ndash; log4j配置文件 &ndash;&gt;-->
+   <!--log4j配置文件-->
   <!--<context-param>-->
     <!--<param-name>log4jConfigLocation</param-name>-->
-    <!--<param-value>/WEB-INF/log4j.properties</param-value>-->
+    <!--<param-value>WEB-INF/classes/log4j.properties</param-value>-->
   <!--</context-param>-->
   <!--&lt;!&ndash; log4j刷新时间 &ndash;&gt;-->
   <!--<context-param>-->
