增加左边导航栏,增加上传文件进度条,增加案件管理,并案分析,一期完成

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -100,7 +100,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>mvc-dispatcher</servlet-name>
-    <url-pattern>/cftzcxx</url-pattern>
+    <url-pattern>/aj</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>mvc-dispatcher</servlet-name>
@@ -108,6 +108,6 @@
   </servlet-mapping>
 
   <welcome-file-list>
-    <welcome-file>cftzcxx</welcome-file>
+    <welcome-file>aj</welcome-file>
   </welcome-file-list>
 </web-app>
