导入注册信息根据表头对应存储属性   DBUtile 修改  部分常用方法封装   统计结果详情导出修复

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.rootLogger = DEBUG ,L1,  E,   stdout
 log4j.appender.L1 = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.L1.File = log/log.log
 log4j.appender.L1.Append = true
-log4j.appender.L1.Threshold = DEBUG
+log4j.appender.L1.Threshold = INFO
 log4j.appender.L1.layout = org.apache.log4j.PatternLayout
 log4j.appender.L1.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 
@@ -19,7 +19,7 @@ log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %l:%c:%t
 
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
-log4j.appender.stdout.Threshold = DEBUG
+log4j.appender.stdout.Threshold = INFO
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = [%d{yyyy-MM-dd HH:mm:ss}]%-5p %c(line:%L) %x-%m%n
 
