--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -19,7 +19,7 @@ log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %l:%c:%t
 
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
-log4j.appender.stdout.Threshold = INFO
+log4j.appender.stdout.Threshold = DEBUG
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = [%d{yyyy-MM-dd HH:mm:ss}]%-5p %c(line:%L) %x-%m%n
 
