--- a/pom.xml
+++ b/pom.xml
@@ -113,11 +113,11 @@
       <artifactId>commons-collections</artifactId>
       <version>3.2.1</version>
     </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.31</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>mysql</groupId>-->
+      <!--<artifactId>mysql-connector-java</artifactId>-->
+      <!--<version>5.1.31</version>-->
+    <!--</dependency>-->
     <dependency>
       <groupId>javax.transaction</groupId>
       <artifactId>jta</artifactId>
@@ -165,11 +165,11 @@
       <artifactId>commons-io</artifactId>
       <version>2.6</version>
     </dependency>
-    <dependency>
-      <groupId>org.xerial</groupId>
-      <artifactId>sqlite-jdbc</artifactId>
-      <version>3.7.2</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.xerial</groupId>-->
+      <!--<artifactId>sqlite-jdbc</artifactId>-->
+      <!--<version>3.7.2</version>-->
+    <!--</dependency>-->
     <dependency>
       <groupId>dom4j</groupId>
       <artifactId>dom4j</artifactId>
@@ -192,6 +192,11 @@
       <artifactId>spring-beans</artifactId>
       <version>${spring.version}</version>
     </dependency>
+
+    <dependency>
+<groupId></groupId>
+<artifactId></artifactId>
+</dependency>
 
     <!--<dependency>-->
     <!--<groupId>org.hibernate</groupId>-->
@@ -218,6 +223,10 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.7.0</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
