--- a/pom.xml
+++ b/pom.xml
@@ -194,9 +194,10 @@
     </dependency>
 
     <dependency>
-<groupId></groupId>
-<artifactId></artifactId>
-</dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
 
     <!--<dependency>-->
     <!--<groupId>org.hibernate</groupId>-->
