--- a/pom.xml
+++ b/pom.xml
@@ -148,12 +148,17 @@
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
-      <version>3.10-FINAL</version>
+      <version>3.15</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml-schemas</artifactId>
+      <version>3.15</version>
     </dependency>
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
-      <version>3.10-FINAL</version>
+      <version>3.15</version>
     </dependency>
     <dependency>
       <groupId>commons-fileupload</groupId>
@@ -213,8 +218,17 @@
       <artifactId>easypoi-web</artifactId>
       <version>3.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.monitorjbl</groupId>
+      <artifactId>xlsx-streamer</artifactId>
+      <version>1.2.0</version>
+    </dependency>
 
-
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>5.2.4.Final</version>
+    </dependency>
 
     <!--<dependency>-->
     <!--<groupId>org.hibernate</groupId>-->
