--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,13 @@
       <artifactId>hibernate-validator</artifactId>
       <version>5.2.4.Final</version>
     </dependency>
+
+    <dependency>
+      <groupId>net.sourceforge.javacsv</groupId>
+      <artifactId>javacsv</artifactId>
+      <version>2.0</version>
+    </dependency>
+
     <!--<dependency>-->
     <!--<groupId>org.hibernate</groupId>-->
     <!--<artifactId>hibernate-annotations</artifactId>-->
