--- a/pom.xml
+++ b/pom.xml
@@ -236,13 +236,22 @@
       <version>2.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itextpdf</artifactId>
+      <version>5.5.13</version>
+    </dependency>
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itext-asian</artifactId>
+      <version>5.2.0</version>
+    </dependency>
+
     <!--<dependency>-->
     <!--<groupId>org.hibernate</groupId>-->
     <!--<artifactId>hibernate-annotations</artifactId>-->
     <!--<version>3.5.6-Final</version>-->
     <!--</dependency>-->
-
-
   </dependencies>
 
   <build>
