--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName = oracle.jdbc.OracleDriver
 jdbc.dialect = org.hibernate.dialect.OracleDialect
 jdbc.databaseurl = jdbc:oracle:thin:@127.0.0.1:1521:orcl
-jdbc.username = gpmgt
-jdbc.password = ZD
+jdbc.username = sinofaith
+jdbc.password = sinofaith
