试用账号申请添加重复密码 支付宝金额字段类型修改 人员模块 字段映射模块修改 授权界面提那家用户名

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -4,3 +4,7 @@ jdbc.databaseurl = jdbc:oracle:thin:@127.0.0.1:1521:orcl
 jdbc.username=sinofaith
 jdbc.password=sinofaith
 
+#本机
+jdbc.match= 30128102a1220a2a608da0ed782ee281e46cfcea
+#服务器
+#jdbc.match= a58391bed4d09cb50fb14e2e6b253ace836fb1e8
