--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>sinofaith</groupId>
-  <artifactId>autoimport</artifactId>
+  <groupId>SINOFAITH</groupId>
+  <artifactId>SINOFAITH</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>autoimport</name>
+  <name>SINOFAITH</name>
   <url>http://www.example.com</url>
 
   <properties>
@@ -114,9 +114,9 @@
       <version>3.2.1</version>
     </dependency>
     <!--<dependency>-->
-      <!--<groupId>mysql</groupId>-->
-      <!--<artifactId>mysql-connector-java</artifactId>-->
-      <!--<version>5.1.31</version>-->
+    <!--<groupId>mysql</groupId>-->
+    <!--<artifactId>mysql-connector-java</artifactId>-->
+    <!--<version>5.1.31</version>-->
     <!--</dependency>-->
     <dependency>
       <groupId>javax.transaction</groupId>
@@ -171,9 +171,9 @@
       <version>2.6</version>
     </dependency>
     <!--<dependency>-->
-      <!--<groupId>org.xerial</groupId>-->
-      <!--<artifactId>sqlite-jdbc</artifactId>-->
-      <!--<version>3.7.2</version>-->
+    <!--<groupId>org.xerial</groupId>-->
+    <!--<artifactId>sqlite-jdbc</artifactId>-->
+    <!--<version>3.7.2</version>-->
     <!--</dependency>-->
     <dependency>
       <groupId>dom4j</groupId>
@@ -231,23 +231,30 @@
     </dependency>
 
     <dependency>
-      <groupId>net.sourceforge.javacsv</groupId>
-      <artifactId>javacsv</artifactId>
-      <version>2.0</version>
-    </dependency>
-
-    <dependency>
       <groupId>com.itextpdf</groupId>
       <artifactId>itextpdf</artifactId>
       <version>5.5.13</version>
     </dependency>
+
     <dependency>
       <groupId>com.itextpdf</groupId>
       <artifactId>itext-asian</artifactId>
       <version>5.2.0</version>
     </dependency>
 
-    <!--<dependency>-->
+    <dependency>
+      <groupId>net.sourceforge.javacsv</groupId>
+      <artifactId>javacsv</artifactId>
+      <version>2.0</version>
+    </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>RELEASE</version>
+      </dependency>
+
+
+      <!--<dependency>-->
     <!--<groupId>org.hibernate</groupId>-->
     <!--<artifactId>hibernate-annotations</artifactId>-->
     <!--<version>3.5.6-Final</version>-->
@@ -255,7 +262,7 @@
   </dependencies>
 
   <build>
-    <finalName>autoimport</finalName>
+    <finalName>SINOFAITH</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
